--- a/Html/home.html
+++ b/Html/home.html
@@ -361,7 +361,7 @@
       </div>
       
       <div class="hero-buttons">
-        <a href="../Papier/eya-guerdelly-resume.pdf" download class="btn">
+        <a href="../Papier/eya_guerdelly_cv.pdf" download="Eya_Guerdelly_CV.pdf" class="btn">
           <i class="ri-download-line"></i> Download CV
         </a>
         <a href="mailto:guerdellyeya@gmail.com?subject=Contact%20from%20Portfolio" class="btn">
