--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Eya Guerdelly - AI Engineer Portfolio</title>
     <!-- Redirection vers home.html dans le dossier Html -->
     <meta http-equiv="refresh" content="0; url=Html/home.html" />
-    <!-- <meta name="description" content="Eya Guerdelly - AI Engineer & Data Science Researcher specializing in Machine Learning, NLP, and Computer Vision"> -->
+    <meta name="description" content="Eya Guerdelly - AI Engineer & Data Science Researcher specializing in Machine Learning, NLP, and Computer Vision">
     <link rel="icon" href="eya-guerdelly.github.io-main/img/eya.png" sizes="64x64" type="image/png">
 
     <link rel="apple-touch-icon" sizes="180x180" href="eya-guerdelly.github.io-main/img/eya.png">
