update social life page

--- a/Html/Social_Life.html
+++ b/Html/Social_Life.html
@@ -212,6 +212,81 @@
             </div>
           </div>
 
+          <!-- CPS Club Treasurer 2023-2024 -->
+          <div class="activity">
+            <div class="activity-content">
+              <img src="../img/treasurer.jpg" alt="CPS Club Treasurer" class="activity-image">
+              <div class="activity-text">
+                <h2><i class='bx bx-group'></i> 💰 Treasurer - Citoyen Positif et Sociable Club (CPS)</h2>
+                <p><strong>Treasurer (2023-2024)</strong> at Citoyen Positif et Sociable Club (CPS). Managed financial operations, budget planning, and resource allocation for club activities. Demonstrated leadership skills and financial responsibility while contributing to positive social impact initiatives.</p>
+                <div class="achievement-highlight">
+                  <i class='bx bx-calendar'></i>
+                  <span>Academic Year 2023-2024</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- ENSI Forum Organization Leader 2023-2024 -->
+          <div class="activity">
+            <div class="activity-content">
+              <img src="../img/oc.jpg" alt="ENSI Forum Organization Leader" class="activity-image">
+              <div class="activity-text">
+                <h2><i class='bx bx-user-voice'></i> 🎯 Organization Leader - ENSI Forum</h2>
+                <p><strong>Organization Leader (2023-2024)</strong> at ENSI Forum. Led event planning, coordination, and execution of professional networking events and career development activities. Facilitated connections between students and industry professionals while managing organizational logistics.</p>
+                <div class="achievement-highlight">
+                  <i class='bx bx-calendar'></i>
+                  <span>Academic Year 2023-2024</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- TuniHack 2023 Participant -->
+          <div class="activity">
+            <div class="activity-content">
+              <img src="../img/tunihack.jpg" alt="TuniHack 2023 Participant" class="activity-image">
+              <div class="activity-text">
+                <h2><i class='bx bx-code-alt'></i> 💻 TuniHack 2023 Participant</h2>
+                <p><strong>Participant</strong> at TuniHack 2023, one of Tunisia's premier hackathon events. Collaborated with talented developers to create innovative solutions within tight deadlines. Enhanced problem-solving skills and gained valuable experience in competitive programming and rapid prototyping.</p>
+                <div class="achievement-highlight">
+                  <i class='bx bx-calendar'></i>
+                  <span>2023</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- RoboCup 2023 OC Member -->
+          <div class="activity">
+            <div class="activity-content">
+              <img src="../img/robocup6.0.jpg" alt="RoboCup 2023 OC Member" class="activity-image">
+              <div class="activity-text">
+                <h2><i class='bx bx-cog'></i> 🤖 Organizing Committee Member - RoboCup 2023</h2>
+                <p><strong>Organizing Committee (OC) Member</strong> at RoboCup 2023. Contributed to the organization and coordination of one of the world's most prestigious robotics competitions. Managed event logistics, supported international teams, and facilitated smooth competition operations while gaining exposure to cutting-edge robotics technologies.</p>
+                <div class="achievement-highlight">
+                  <i class='bx bx-calendar'></i>
+                  <span>2023</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- IEEE Xtreme International Event 2022 -->
+          <div class="activity">
+            <div class="activity-content">
+              <img src="../img/xtreeme.jpg" alt="IEEE Xtreme 2022 Participant" class="activity-image">
+              <div class="activity-text">
+                <h2><i class='bx bx-world'></i> 🌍 IEEE Xtreme International Event 2022</h2>
+                <p><strong>Participant</strong> in IEEE Xtreme 2022, a global 24-hour programming competition organized by IEEE. Competed alongside thousands of students worldwide, solving algorithmic challenges and demonstrating programming proficiency under pressure. Gained international exposure and enhanced competitive programming skills.</p>
+                <div class="achievement-highlight">
+                  <i class='bx bx-calendar'></i>
+                  <span>2022</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </section>
       
